<resources>
    <string name="app_name">mobile-client</string>
    <string name="ID">Student ID</string>
    <string name="pass">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="Credentials">Please enter your credentials</string>
    <string name="NoAcc">Don\'t Have an Account?  Sign Up</string>
    <string name="IdiotUser">Please enable camera permission</string>
    <string name="InvalidID">Enter a valid ID</string>
    <string name="InvalidName">Enter a valid name</string>
    <string name="ImgDesc">Ain Shams logo</string>
    <string name="CourseCode">CSE437</string>
    <string name="Name">Full Name</string>
    <string name="CourseName">Mobile Computing</string>
    <string name="ScanCode">Scan Code</string>
    <string name="SignUpSuccess">Successfully signed up</string>
    <string name="SignUpDone">you have already signed up</string>
    <string name="LoginSuccess">Login successful</string>
    <string name="NoLogin">You are not registered for this course please sign up</string>
    <string name="Attend">Attendance submitted</string>
    <string name="AttendDone">you have already submitted your attendance</string>
    <string name="error">An error occurred pleases try again later</string>
</resources>
