<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/input_group">

        <TextView
            android:id="@+id/SignUpTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textColor="@color/White"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/CredentialTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/Credentials"
            android:textColor="@color/White"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <EditText
            android:id="@+id/Idtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:hint="@string/ID"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp" />


        <Button
            android:id="@+id/SignInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FE5295"
            android:textSize="17sp" />


    </LinearLayout>

</RelativeLayout>